@@ -42,10 +42,10 @@ class population;
  * ID and a virtual subpopulation ID.
  *
  */
-class vsp
+class vspID
 {
 public:
-	vsp(const vectori & subPop)
+	vspID(const vectori & subPop)
 	{
 		DBG_FAILIF(subPop.size() != 2, ValueError,
 			"Please specify both subPop and virtualSubPop ID or a virtual subpopulation");
@@ -53,7 +53,7 @@ public:
 		m_virtualSubPop = subPop[1];
 	}
 
-	vsp(SubPopID subPop, SubPopID virtualSubPop = InvalidSubPopID)
+	vspID(SubPopID subPop, SubPopID virtualSubPop = InvalidSubPopID)
 		: m_subPop(subPop), m_virtualSubPop(virtualSubPop)
 	{
 	}
