@@ -13,6 +13,11 @@ version 0.8.9 - Not released, available at https://simupop.svn.sourceforge.net/s
   - CHG: Remove read support for XML and Binary formats.
   - CHG: Completely change the way sex chromosomes are handled, and add
 		initial support for mitochondrial chromosome.
+  - CHG: Rename class vsp to vspID.
+  - CHG: Merge population::subPopSize and population::virtualSubPopSize.
+  - CHG: Change parameter of population::virtualSubPopName().
+  - CHG: Merge population::individuals(sp) and population::individuals(sp, vsp).
+
 
 version 0.8.8 - (Rev 1787) Oct 24, 2008
   - CHG: Remove the replicate group feature.
